--- a/shell/package.json
+++ b/shell/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.2",
+    "bundle-loader": "^0.5.6",
     "history": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
